--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,16 +1,21 @@
 [package]
-name = "project_name"
+name = "playground-tfhe"
 version = "0.1.0"
 edition = "2021"
 license = "MIT"
 description = ""
 keywords = []
-documentation = "https://docs.rs/project_name"
-repository = "https://github.com/qdwang/project_name"
 
 [dev-dependencies]
 
 [dependencies]
+bincode = "1.3.3"
+
+[target.'cfg(target_arch = "x86_64")'.dependencies]
+tfhe = { version = "*", features = ["boolean", "shortint", "integer", "x86_64-unix"] }
+
+[target.'cfg(target_arch = "aarch64")'.dependencies]
+tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
 
 [profile.release]
 codegen-units = 1
