--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,10 +12,10 @@ keywords = []
 bincode = "1.3.3"
 
 [target.'cfg(target_arch = "x86_64")'.dependencies]
-tfhe = { version = "*", features = ["boolean", "shortint", "integer", "x86_64"] }
+tfhe = { version = "0.4", features = ["boolean", "shortint", "integer", "x86_64"] }
 
 [target.'cfg(target_arch = "aarch64")'.dependencies]
-tfhe = { version = "*", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
+tfhe = { version = "0.4", features = ["boolean", "shortint", "integer", "aarch64-unix"] }
 
 [profile.release]
 codegen-units = 1
